tests/snapshots/semantics_tests__err_for_par_await.diag.snap
---
source: tests/semantics_tests.rs
expression: error_msg
---
Semantic error: E0605: `await` is not allowed inside `for par` or `for parvec` loops.
