tests/snapshots/semantics_tests__err_for_seq_simd.diag.snap
---
source: tests/semantics_tests.rs
expression: error_msg
---
Semantic error: E0705: `simdWidth` option requires `for vec` or `for parvec` policy.
