tests/snapshots/semantics_tests__err_len_function_call.diag.snap
---
source: tests/semantics_tests.rs
expression: error_msg
---
● : W0700: `len(expr)` is deprecated. Use `expr.length` instead.
────────────────────────────────────────────────────────────

  ⓘ W0700: `len(expr)` is deprecated. Use `expr.length` instead.
────────────────────────────────────────────────────────────
