tests/snapshots/semantics_tests__err_length_invalid.diag.snap
---
source: tests/semantics_tests.rs
expression: error_msg
---
● : E0701: `.length` is only available on strings, bytes, and arrays. Consider `.count()` for iterables.
────────────────────────────────────────────────────────────

  ⓘ E0701: `.length` is only available on strings, bytes, and arrays. Consider `.count()` for iterables.
────────────────────────────────────────────────────────────
