tests/snapshots/semantics_tests__err_task_double_await.diag.snap
---
source: tests/semantics_tests.rs
expression: error_msg
---
[1;31m●[0m [1;31m[0m: [1mE0604: handle 'handle' awaited more than once.[0m
[90m────────────────────────────────────────────────────────────[0m

  [1;34mⓘ[0m E0604: handle 'handle' awaited more than once.
[90m────────────────────────────────────────────────────────────[0m
