tests/snapshots/semantics_tests__ok_async_inference.sem.snap
---
source: tests/semantics_tests.rs
expression: json
---
{
  "items": [
    {
      "Function": {
        "name": "fetchUser",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "response"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "MethodCall": {
                        "object": {
                          "Identifier": "http"
                        },
                        "method": "get",
                        "args": [
                          {
                            "Literal": {
                              "String": "https://api.example.com/user"
                            }
                          }
                        ],
                        "adapter": "seq",
                        "adapter_options": {}
                      }
                    },
                    "args": [],
                    "exec_policy": "async",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "Return": {
                "expr": {
                  "MethodCall": {
                    "object": {
                      "Identifier": "response"
                    },
                    "method": "json",
                    "args": [],
                    "adapter": "seq",
                    "adapter_options": {}
                  }
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": true,
        "contains_fail": false
      }
    },
    {
      "Function": {
        "name": "processData",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "user"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "fetchUser"
                    },
                    "args": [],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "processed"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "processUser"
                    },
                    "args": [
                      {
                        "Identifier": "user"
                      }
                    ],
                    "exec_policy": "async",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "Return": {
                "expr": {
                  "Identifier": "processed"
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": true,
        "contains_fail": false
      }
    },
    {
      "Function": {
        "name": "main",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "result"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "processData"
                    },
                    "args": [],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "Expr": {
                "expr": {
                  "Call": {
                    "callee": {
                      "Identifier": "print"
                    },
                    "args": [
                      {
                        "Identifier": "result"
                      }
                    ],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": true,
        "contains_fail": false
      }
    }
  ]
}
