tests/snapshots/semantics_tests__ok_number_plus_float.sem.snap
---
source: tests/semantics_tests.rs
expression: json
---
{
  "items": [
    {
      "Function": {
        "name": "main",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "a"
                    },
                    "type_ref": {
                      "Simple": "number"
                    }
                  }
                ],
                "init": {
                  "Literal": {
                    "Int": 1
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "b"
                    },
                    "type_ref": {
                      "Simple": "float"
                    }
                  }
                ],
                "init": {
                  "Literal": {
                    "Float": 2.0
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "c"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "Add",
                    "left": {
                      "Identifier": "a"
                    },
                    "right": {
                      "Identifier": "b"
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    }
  ]
}
